@@ -35,6 +35,7 @@
 #include "ompi/datatype/dt_arch.h"
 
 static int ompi_osc_pt2pt_component_open(void);
+static int32_t registered_callback = 0;
 
 ompi_osc_pt2pt_component_t mca_osc_pt2pt_component = {
     { /* ompi_osc_base_component_t */
@@ -279,6 +280,8 @@ ompi_osc_pt2pt_component_select(ompi_win_t *win,
 
     module->p2p_num_pending_out = 0;
     module->p2p_num_pending_in = 0;
+    module->p2p_num_post_msgs = 0;
+    module->p2p_num_complete_msgs = 0;
     module->p2p_tag_counter = 0;
 
     OBJ_CONSTRUCT(&(module->p2p_long_msgs), opal_list_t);
@@ -323,7 +326,7 @@ ompi_osc_pt2pt_component_select(ompi_win_t *win,
 
     module->p2p_fence_coll_results = malloc(sizeof(int) * 
                                             ompi_comm_size(module->p2p_comm));
-    if (NULL == module->p2p_fence_coll_counts) {
+    if (NULL == module->p2p_fence_coll_results) {
         free(module->p2p_fence_coll_counts);
         free(module->p2p_copy_num_pending_sendreqs);
         OBJ_DESTRUCT(&module->p2p_copy_pending_sendreqs);
@@ -334,7 +337,7 @@ ompi_osc_pt2pt_component_select(ompi_win_t *win,
         OBJ_DESTRUCT(&(module->p2p_acc_lock));
         OBJ_DESTRUCT(&(module->p2p_lock));
         free(module);
-        return ret;
+        return OMPI_ERROR;
     }
 
     /* figure out what sync method to use */
@@ -353,6 +356,39 @@ ompi_osc_pt2pt_component_select(ompi_win_t *win,
     /* pwsc data */
     module->p2p_pw_group = NULL;
     module->p2p_sc_group = NULL;
+    module->p2p_sc_remote_active_ranks = 
+        malloc(sizeof(bool) * ompi_comm_size(module->p2p_comm));
+    if (NULL == module->p2p_sc_remote_active_ranks) {
+        free(module->p2p_fence_coll_results);
+        free(module->p2p_fence_coll_counts);
+        free(module->p2p_copy_num_pending_sendreqs);
+        OBJ_DESTRUCT(&module->p2p_copy_pending_sendreqs);
+        OBJ_DESTRUCT(&module->p2p_long_msgs);
+        free(module->p2p_num_pending_sendreqs);
+        OBJ_DESTRUCT(&module->p2p_pending_sendreqs);
+        ompi_comm_free(&comm);
+        OBJ_DESTRUCT(&(module->p2p_acc_lock));
+        OBJ_DESTRUCT(&(module->p2p_lock));
+        free(module);
+        return OMPI_ERROR;
+    }
+    module->p2p_sc_remote_ranks = 
+        malloc(sizeof(int) * ompi_comm_size(module->p2p_comm));
+    if (NULL == module->p2p_sc_remote_ranks) {
+        free(module->p2p_sc_remote_active_ranks);
+        free(module->p2p_fence_coll_results);
+        free(module->p2p_fence_coll_counts);
+        free(module->p2p_copy_num_pending_sendreqs);
+        OBJ_DESTRUCT(&module->p2p_copy_pending_sendreqs);
+        OBJ_DESTRUCT(&module->p2p_long_msgs);
+        free(module->p2p_num_pending_sendreqs);
+        OBJ_DESTRUCT(&module->p2p_pending_sendreqs);
+        ompi_comm_free(&comm);
+        OBJ_DESTRUCT(&(module->p2p_acc_lock));
+        OBJ_DESTRUCT(&(module->p2p_lock));
+        free(module);
+        return OMPI_ERROR;
+    }
 
     /* lock data */
     module->p2p_lock_status = 0;
@@ -376,10 +412,12 @@ ompi_osc_pt2pt_component_select(ompi_win_t *win,
     /* sync memory - make sure all initialization completed */
     opal_atomic_mb();
 
-    /* register to receive fragment callbacks */
-    ret = mca_bml.bml_register(MCA_BTL_TAG_OSC_PT2PT,
-                               ompi_osc_pt2pt_component_fragment_cb,
-                               NULL);
+    /* register to receive fragment callbacks, if not already done */
+    if (OPAL_THREAD_ADD32(&registered_callback, 1) <= 1) {
+        ret = mca_bml.bml_register(MCA_BTL_TAG_OSC_PT2PT,
+                                   ompi_osc_pt2pt_component_fragment_cb,
+                                   NULL);
+    }
 
 
     if (module->p2p_eager_send) {
@@ -429,6 +467,12 @@ ompi_osc_pt2pt_component_fragment_cb(struct mca_btl_base_module_t *btl,
             module = ompi_osc_pt2pt_windx_to_module(header->hdr_windx);
             if (NULL == module) return;
 
+            if (!ompi_win_exposure_epoch(module->p2p_win)) {
+                opal_output(0, "Invalid MPI_PUT on Window %s.  Window not in exposure epoch",
+                            module->p2p_win->w_name);
+                break;
+            }
+
             ret = ompi_osc_pt2pt_sendreq_recv_put(module, header, payload);
         }
         break;
@@ -451,6 +495,12 @@ ompi_osc_pt2pt_component_fragment_cb(struct mca_btl_base_module_t *btl,
             /* get our module pointer */
             module = ompi_osc_pt2pt_windx_to_module(header->hdr_windx);
             if (NULL == module) return;
+
+            if (!ompi_win_exposure_epoch(module->p2p_win)) {
+                opal_output(0, "Invalid MPI_ACCUMULATE on Window %s.  Window not in exposure epoch",
+                            module->p2p_win->w_name);
+                break;
+            }
 
             /* receive into temporary buffer */
             ret = ompi_osc_pt2pt_sendreq_recv_accum(module, header, payload);
@@ -478,6 +528,12 @@ ompi_osc_pt2pt_component_fragment_cb(struct mca_btl_base_module_t *btl,
             /* get our module pointer */
             module = ompi_osc_pt2pt_windx_to_module(header->hdr_windx);
             if (NULL == module) return;
+
+            if (!ompi_win_exposure_epoch(module->p2p_win)) {
+                opal_output(0, "Invalid MPI_GET on Window %s.  Window not in exposure epoch",
+                            module->p2p_win->w_name);
+                break;
+            }
 
             /* create or get a pointer to our datatype */
             proc = module->p2p_comm->c_pml_procs[header->hdr_origin]->proc_ompi;
@@ -540,7 +596,7 @@ ompi_osc_pt2pt_component_fragment_cb(struct mca_btl_base_module_t *btl,
             module = ompi_osc_pt2pt_windx_to_module(header->hdr_windx);
             if (NULL == module) return;
 
-            OPAL_THREAD_ADD32(&(module->p2p_num_pending_in), -1);
+            OPAL_THREAD_ADD32(&(module->p2p_num_post_msgs), -1);
         }
         break;
     case OMPI_OSC_PT2PT_HDR_COMPLETE:
@@ -561,7 +617,7 @@ ompi_osc_pt2pt_component_fragment_cb(struct mca_btl_base_module_t *btl,
 
             /* we've heard from one more place, and have value reqs to
                process */
-            OPAL_THREAD_ADD32(&(module->p2p_num_pending_out), -1);
+            OPAL_THREAD_ADD32(&(module->p2p_num_complete_msgs), -1);
             OPAL_THREAD_ADD32(&(module->p2p_num_pending_in), header->hdr_value[0]);
         }
         break;
