@@ -59,7 +59,7 @@ int MPI_Accumulate(void *origin_addr, int origin_count, MPI_Datatype origin_data
         } else if (MPI_OP_NULL == op) {
             rc = MPI_ERR_OP;
         } else if (!ompi_win_comm_allowed(win)) {
-            rc = MPI_ERR_RMA_CONFLICT;
+            rc = MPI_ERR_RMA_SYNC;
         } else {
             OMPI_CHECK_DATATYPE_FOR_SEND(rc, origin_datatype, origin_count);
         }
