@@ -25,6 +25,8 @@ version 1.0.
 1.1.2
 -----
 
+- Fix a number of race conditions with the MPI-2 Onesided
+  interface
 - Fix the "tuned" collective componenete where some cases where
   MPI_BCAST could hang.
 - Update TCP support to support non-uniform TCP environments.
